--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,27 @@
 # Configuration file
 # key = value
+
+
+# configurações do datasource. 
+# Drivers que podem ser nativos: H2, mariaDB e postgres e desde versao 23 mysql. Existe client MongoDB
+# Poderia estar no persistence.xml, mas a documentação oficial sugere que utilize este arquivo
+quarkus.datasource.url=jdbc:postgresql:quarkus_test
+quarkus.datasource.driver=org.postgresql.Driver
+quarkus.datasource.username=postgres
+quarkus.datasource.password=2711
+
+# Opções disponíveis: none (utilizado para produção, juntamente com a extensão Flyway), create, drop-and-create, drop, update
+# executar ./mvnw quarkus:dev -Dquarkus.profile=dev
+
+%dev.quarkus.hibernate-orm.database.generation=drop-and-create
+%dev.quarkus.hibernate-orm.sql-load-script=import-dev.sql
+
+%prod.quarkus.hibernate-orm.database.generation = none
+%prod.quarkus.hibernate-orm.sql-load-script = no-file
+
+
+
+
+quarkus.swagger-ui.always-include=true
+#quarkus.smallrye-openapi.path=/openapi
+
